Added posibility to create collection with image from file
