# internal/dto/collection.go
@@ -4,10 +4,12 @@ type CreateCollectionDTO struct {
 	Name        string `json:"name"`
 	Description string `json:"description"`
 	Image       string `json:"image"`
+	ImageFile   []byte `json:"imageFile"`
 }
 
 type UpdateCollectionDTO struct {
 	Name        string `json:"name"`
 	Description string `json:"description"`
 	Image       string `json:"image"`
+	ImageFile   []byte `json:"imageFile"`
 }
