# web/swagger.json
@@ -370,26 +370,34 @@
             "required": true
           },
           {
-            "name": "Body",
-            "in": "body",
-            "required": true,
-            "schema": {
-              "type": "object",
-              "properties": {
-                "description": {
-                  "type": "string",
-                  "x-go-name": "Description"
-                },
-                "image": {
-                  "type": "string",
-                  "x-go-name": "Image"
-                },
-                "name": {
-                  "type": "string",
-                  "x-go-name": "Name"
-                }
-              }
-            }
+            "type": "string",
+            "x-go-name": "Name",
+            "name": "name",
+            "in": "formData",
+            "required": true
+          },
+          {
+            "type": "string",
+            "x-go-name": "Description",
+            "name": "description",
+            "in": "formData",
+            "required": true
+          },
+          {
+            "type": "string",
+            "x-go-name": "Image",
+            "name": "image",
+            "in": "formData"
+          },
+          {
+            "type": "array",
+            "items": {
+              "type": "integer",
+              "format": "uint8"
+            },
+            "x-go-name": "ImageFile",
+            "name": "imageFile",
+            "in": "formData"
           }
         ],
         "responses": {
@@ -517,26 +525,34 @@
             "required": true
           },
           {
-            "name": "Body",
-            "in": "body",
-            "required": true,
-            "schema": {
-              "type": "object",
-              "properties": {
-                "description": {
-                  "type": "string",
-                  "x-go-name": "Description"
-                },
-                "image": {
-                  "type": "string",
-                  "x-go-name": "Image"
-                },
-                "name": {
-                  "type": "string",
-                  "x-go-name": "Name"
-                }
-              }
-            }
+            "type": "string",
+            "x-go-name": "Name",
+            "name": "name",
+            "in": "formData",
+            "required": true
+          },
+          {
+            "type": "string",
+            "x-go-name": "Description",
+            "name": "description",
+            "in": "formData",
+            "required": true
+          },
+          {
+            "type": "string",
+            "x-go-name": "Image",
+            "name": "image",
+            "in": "formData"
+          },
+          {
+            "type": "array",
+            "items": {
+              "type": "integer",
+              "format": "uint8"
+            },
+            "x-go-name": "ImageFile",
+            "name": "imageFile",
+            "in": "formData"
           }
         ],
         "responses": {
